[package]
name = "VoidEngine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
winit = { version = "0.30", features = ["android-native-activity"] }
env_logger = "0.10"
log = "0.4"
wgpu = "25.0"
pollster = "0.3"
bytemuck = { version = "1.16", features = [ "derive" ] }
imgui-wgpu = "0.25.0"
imgui = "0.12.0"
imgui-winit-support = "0.13.0"
image = "0.24"
cgmath = "0.18"

[lib]
